fix: corrected css of export, remove overflow of mkpopup

--- a/css/index.css
+++ b/css/index.css
@@ -6109,7 +6109,6 @@ textarea.form-control-lg {
   height: 100%;
   background-color: rgba(0,0,0,0.4);
   margin: auto;
-  overflow: scroll;
 }
 
 .mkpopup_content_outside {
